[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_simonreynolds77"
version = "0.0.1"
authors = [
	{name="Simon Reynolds", email="email@eamil.com"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/simonreynolds77/packaging_tutorial"
"Bug Tracker" = "https://github.com/simonreynolds77/packaging_tutorial/issues" 